[gd_scene load_steps=24 format=3 uid="uid://ijbigumg6xur"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_i82xs"]
[ext_resource type="Texture2D" uid="uid://dtvquu16uwc6n" path="res://assets/slime.png" id="2_isosq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0k45a"]
atlas = ExtResource("2_isosq")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqtan"]
atlas = ExtResource("2_isosq")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjfla"]
atlas = ExtResource("2_isosq")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eup01"]
atlas = ExtResource("2_isosq")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ul08"]
atlas = ExtResource("2_isosq")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4urm"]
atlas = ExtResource("2_isosq")
region = Rect2(160, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcypi"]
atlas = ExtResource("2_isosq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8bx8"]
atlas = ExtResource("2_isosq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_452tw"]
atlas = ExtResource("2_isosq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdtf3"]
atlas = ExtResource("2_isosq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k80q"]
atlas = ExtResource("2_isosq")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni36i"]
atlas = ExtResource("2_isosq")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw70f"]
atlas = ExtResource("2_isosq")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hejbh"]
atlas = ExtResource("2_isosq")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v8lv"]
atlas = ExtResource("2_isosq")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8bi8"]
atlas = ExtResource("2_isosq")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71k42"]
atlas = ExtResource("2_isosq")
region = Rect2(192, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aviey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k45a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqtan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eup01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ul08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4urm")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcypi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8bx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdtf3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k80q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni36i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw70f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hejbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v8lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8bi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71k42")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvaa3"]
radius = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ioii5"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xfeo1"]

[node name="slime" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_i82xs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aviey")
animation = &"idle"
frame_progress = 0.345008

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_cvaa3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ioii5")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_xfeo1")

[node name="take_dmg_cooldown" type="Timer" parent="."]
wait_time = 0.8

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -7.0
offset_top = 8.0
offset_right = 143.0
offset_bottom = 38.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
